test/compilable/fwdref12531.d
// PERMUTE_ARGS:

struct Node(T)
{
    T _val;
}

void foo()
{
    static struct Foo
    {
        Node!Foo* node;
    }
}
