test/fail_compilation/fail268.d
template T(){
 	    this(){}  // 14G ICE
 	    ~this() {}  // 14H ICE
} 	
void test(){
	    mixin T!();
}

